fix modal height and spacing

--- a/style.css
+++ b/style.css
@@ -77,3 +77,13 @@ body {
     transform-origin: top left;
   }
 }
+
+@media (min-width: 768px) {
+  #hotspot-detail-modal {
+    left: 0.5rem;
+  }
+
+  #hotspot-detail-modal .modal-dialog {
+    margin: 0;
+  }
+}
